--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.7.7",
     "chokidar": "^3.6.0",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "webdav": "^5.7.1",
     "ws": "^8.18.0",
     "yaml": "^2.5.0"
